--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
+      - run: |
+          julia --project=docs docs/addnursery.jl
       - uses: actions/cache@v1
         env:
           cache-name: cache-artifacts
