--- a/Project.toml
+++ b/Project.toml
@@ -6,15 +6,17 @@ version = "0.1.1"
 [deps]
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
+Sparspak = "e56a9233-b9d6-4f03-8d0f-1825330902ac"
 VoronoiFVM = "82b139dc-5afc-11e9-35da-9b9bdfd336f3"
 
 [compat]
 DifferentialEquations = "7.6"
-SciMLBase = "1.76"
 RecursiveArrayTools = "2"
 Reexport = "1"
-VoronoiFVM = "0.18.6"
+SciMLBase = "1.76"
+VoronoiFVM = "0.18.10"
 julia = "1.8"
