--- a/Project.toml
+++ b/Project.toml
@@ -18,5 +18,6 @@ DifferentialEquations = "7.6"
 RecursiveArrayTools = "2"
 Reexport = "1"
 SciMLBase = "1.76"
+Sparspak = "0.3"
 VoronoiFVM = "0.18.10"
 julia = "1.8"
