--- a/Project.toml
+++ b/Project.toml
@@ -18,5 +18,5 @@ DifferentialEquations = "7.6"
 RecursiveArrayTools = "2"
 Reexport = "1"
 SciMLBase = "1.76"
-VoronoiFVM = "0.18.10"
+VoronoiFVM = "0.18.10, 0.19"
 julia = "1.8"
