--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -19,3 +19,9 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 VoronoiFVM = "82b139dc-5afc-11e9-35da-9b9bdfd336f3"
 VoronoiFVMDiffEq = "c4d4532c-19f6-4375-9ced-3808a145cd37"
+
+[compat]
+Pluto = "0.19.25"
+VoronoiFVM = "0.18.10,0.19,1"
+VoronoiFVMDiffEq = "0.1.2"
+julia = "1.8"
