--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,6 @@ VoronoiFVM = "82b139dc-5afc-11e9-35da-9b9bdfd336f3"
 DifferentialEquations = "7.6"
 RecursiveArrayTools = "2"
 Reexport = "1"
-SciMLBase = "1.76"
+SciMLBase = "1.76, 2"
 VoronoiFVM = "0.18.10,0.19,1"
 julia = "1.8"
