--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "VoronoiFVMDiffEq"
 uuid = "c4d4532c-19f6-4375-9ced-3808a145cd37"
 authors = ["Jürgen Fuhrmann <juergen-fuhrmann@web.de>"]
-version = "0.1.3"
+version = "0.2"
 
 [deps]
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
@@ -16,5 +16,5 @@ DifferentialEquations = "7.6"
 RecursiveArrayTools = "2"
 Reexport = "1"
 SciMLBase = "1.76"
-VoronoiFVM = "0.18.10,0.19,1"
+VoronoiFVM = "0.18.10 - 1.17.1"
 julia = "1.8"
