--- a/Project.toml
+++ b/Project.toml
@@ -17,4 +17,4 @@ RecursiveArrayTools = "2"
 Reexport = "1"
 SciMLBase = "1.76"
 VoronoiFVM = "0.18.10 - 1.17.1"
-julia = "1.8"
+julia = "1.8 - 1.10"
