--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "VoronoiFVMDiffEq"
 uuid = "c4d4532c-19f6-4375-9ced-3808a145cd37"
 authors = ["Jürgen Fuhrmann <juergen-fuhrmann@web.de>"]
-version = "0.2"
+version = "0.2.0"
 
 [deps]
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
@@ -16,5 +16,5 @@ DifferentialEquations = "7"
 RecursiveArrayTools = "2,3"
 Reexport = "1"
 SciMLBase = "1.76,2"
-VoronoiFVM = "0.19 - 1.17"
+VoronoiFVM = "~1.0, ~1.1, ~1.2, ~1.3, ~1.4, ~1.5, ~1.6, ~1.7, ~1.8, ~1.9, ~1.10, ~1.11, ~1.12, ~1.13, ~1.14, ~1.15, ~1.16, ~1.17"
 julia = "1.8 - 1.10"
